--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,3 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+sha2 = "0.11.0-pre.3"
+serde = { version = "1.0.203", features = ["derive"] }
+
+
+#[dev-dependencies]
+#rand = "0.8.5"
