--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,5 +8,5 @@ sha2 = "0.11.0-pre.3"
 serde = { version = "1.0.203", features = ["derive"] }
 
 
-#[dev-dependencies]
-#rand = "0.8.5"
+[dev-dependencies]
+rand = "0.8.5"
