--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sha2 = "0.11.0-pre.3"
+#sha2 = "0.11.0-pre.3"
 serde = { version = "1.0.203", features = ["derive"] }
 
+[dependencies.sha2]
+git = "https://github.com/risc0/RustCrypto-hashes"
+tag = "sha2-v0.10.6-risczero.0"
 
 [dev-dependencies]
 rand = "0.8.5"
