--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-sha2 = "0.11.0-pre.3"
+blake3 = "1.8.2"
 serde = { version = "1.0.203", features = ["derive"] }
 
 
